# bb-event-service

./: BUILD.bazel  WORKSPACE
cmd/bb_event_service/: BUILD.bazel  main.go
pkg/proto/configuration/bb_event_service/: bb_event_service.proto
