load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/buildbarn/bb-event-service
gazelle(
    name = "gazelle",
)

load("@io_bazel_rules_go//go:def.bzl", "go_path")

# build this to get the gopath directory that can be used by standard Go tools
# Referenced in vscode project config .vscode/settings.json
go_path(
    name = "gopath",
    testonly = True,  # so we can depend on test targets
    deps = [
        "%s:go_default_library" % (pkg)
        for pkg in ["//pkg/%s" % (dir) for dir in [
                "configuration",
                "proto/configuration/bb_event_service",
    ]]
    ] +
    [
        "//cmd/bb_event_service"
    ],
)
